--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "sqlalchemy (>=2.0.41,<3.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "pydantic (>=2.11.5,<3.0.0)",
-    "alembic (>=1.16.1,<2.0.0)"
+    "alembic (>=1.16.1,<2.0.0)",
+    "pandas (>=2.2.3,<3.0.0)"
 ]
 
 
