--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "pydantic (>=2.11.5,<3.0.0)",
     "alembic (>=1.16.1,<2.0.0)",
-    "pandas (>=2.2.3,<3.0.0)"
+    "pandas (>=2.2.3,<3.0.0)",
+    "yfinance (>=0.2.61,<0.3.0)"
 ]
 
 [tool.poetry]
