--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "pydantic (>=2.11.5,<3.0.0)",
     "alembic (>=1.16.1,<2.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
-    "yfinance (>=0.2.61,<0.3.0)"
+    "yfinance (>=0.2.61,<0.3.0)",
+    "numpy (>=2.3.0,<3.0.0)"
 ]
 
 [tool.poetry]
