--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "alembic (>=1.16.1,<2.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
     "yfinance (>=0.2.61,<0.3.0)",
-    "numpy (>=2.3.0,<3.0.0)"
+    "numpy (>=2.3.0,<3.0.0)",
+    "fastapi (>=0.115.12,<0.116.0)",
+    "uvicorn (>=0.34.3,<0.35.0)"
 ]
 
 [tool.poetry]
