--- a/frontend/portfolio/package.json
+++ b/frontend/portfolio/package.json
@@ -12,16 +12,22 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@pinia/nuxt": "^0.11.1",
+    "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.17.5",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.3.0",
     "pino": "^9.7.0",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1",
+    "vue3-apexcharts": "^1.8.0",
     "vuetify": "^3.8.9"
   },
   "devDependencies": {
+    "@nuxt/schema": "^3.17.5",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^24.0.1",
     "sass": "^1.89.2",
     "vite-plugin-vuetify": "^2.1.1"
   }
