--- a/frontend/portfolio/package.json
+++ b/frontend/portfolio/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.17.5",
+    "papaparse": "^5.5.3",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.3.0",
     "pino": "^9.7.0",
@@ -28,6 +29,7 @@
     "@nuxt/schema": "^3.17.5",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^24.0.1",
+    "@types/papaparse": "^5.3.16",
     "sass": "^1.89.2",
     "vite-plugin-vuetify": "^2.1.1"
   }
