--- a/frontend/portfolio/package.json
+++ b/frontend/portfolio/package.json
@@ -14,6 +14,7 @@
     "@pinia/nuxt": "^0.11.1",
     "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
+    "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.17.5",
     "papaparse": "^5.5.3",
