--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   db:
     image: postgres:17
@@ -14,3 +16,4 @@ services:
 
 volumes:
   postgres_data:
+    driver: local
